fixed scroll and wrap message

--- a/public/style.css
+++ b/public/style.css
@@ -67,6 +67,7 @@ body {
   /* width: 450px; */
   width: 100%;
   overflow: auto;
+  word-wrap: break-word;
 }
 
 .user-list {
